--- a/eurostart/src/app/lista-trenes/lista-trenes.page.html
+++ b/eurostart/src/app/lista-trenes/lista-trenes.page.html
@@ -1,5 +1,9 @@
 <ion-header *ngIf="hasLoaded">
-  {{data.train.origen}} - {{data.train.destino}}
+  <ion-toolbar>
+    <ion-title style="text-align: center">
+      {{data.train.origen}} - {{data.train.destino}}
+    </ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content *ngIf="hasLoaded">
@@ -8,12 +12,12 @@
       <ion-card-content>
         <ion-row>
           <ion-item>
-            <h1>{{data.train.origen}} - {{data.train.destino}}</h1>
+            <h1 style="text-align: center">{{data.train.origen}} - {{data.train.destino}}</h1>
           </ion-item>
         </ion-row>
         <ion-row>
           <ion-col><br>
-            <p style="text-align: center; font-size: 20px"> 25€ </p>
+            <p style="text-align: center; font-size: 20px"> {{data.train.precio}}</p>
           </ion-col>
           <ion-col>
             <ion-button expand="block" size="large"> Reservar </ion-button>
