modified page tickets

--- a/eurostart/src/app/tickets/tickets.page.html
+++ b/eurostart/src/app/tickets/tickets.page.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Tickets</ion-title>
+    <ion-title text-center>Tickets</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-searchbar showCancelButton cancelButtonText="Custom Cancel"></ion-searchbar>
 
 </ion-content>
