added html to ticket-info

--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -1,9 +1,47 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>ticket-info</ion-title>
+    <ion-title></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-input class="input">{{name}}</ion-input>
+        </ion-col>
+        <ion-col>
+          <ion-chip class="priceChip" color="secondary">
+            <ion-label color="dark">{{pricep}}/p</ion-label>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-input class="input">{{lastName}}</ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-chip color="secondary">
+            <ion-label color="dark">{{start}}</ion-label>
+          </ion-chip>
+        </ion-col>
+        <ion-col>
+          <ion-icon name="arrow-round-forward" size="large" class="arrow"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-chip color="secondary">
+            <ion-label color="dark">{{finish}}</ion-label>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-input class="input">Número de personas: {{people}}</ion-input>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
