--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -13,7 +13,7 @@
         </ion-col>
         <ion-col>
           <ion-chip class="priceChip" color="secondary">
-            <ion-label color="dark">{{pricep}}/p</ion-label>
+            <ion-label color="dark">{{price}}/p</ion-label>
           </ion-chip>
         </ion-col>
       </ion-row>
@@ -40,6 +40,16 @@
       <ion-row>
         <ion-col>
           <ion-input class="input">Número de personas: {{people}}</ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="isTrain">
+        <ion-col>
+          <ion-input class="input">Ticket de Tren</ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!isTrain">
+        <ion-col>
+          <ion-input class="input">Reserva de Hotel</ion-input>
         </ion-col>
       </ion-row>
     </ion-grid>
