--- a/eurostart/src/app/searchbar/searchbar.page.html
+++ b/eurostart/src/app/searchbar/searchbar.page.html
@@ -13,14 +13,12 @@
           <ion-select-option *ngFor="let city of citiesList"  value="{{city}}">{{city}}</ion-select-option>
         </ion-select>
   </ion-item>
-{{cityFrom}}
   <ion-item>
     <label for="">To:</label>
       <ion-select placeholder="Choose city" [(ngModel)]="cityTo">
           <ion-select-option *ngFor="let city of citiesList"  value="{{city}}">{{city}}</ion-select-option>
         </ion-select>
   </ion-item>
-{{cityTo}}
   <ion-item>
     <label for="">Start date:</label>
       <ion-datetime [(ngModel)]="fromDate"></ion-datetime>
@@ -30,10 +28,16 @@
     <ion-datetime min="{{fromDate}}"></ion-datetime>
   </ion-item>
   <ion-item>
-    <label>Number of Passengers:</label>
+    <label>Number of Adults:</label>
     <label for="">{{numberPassengers}}</label>
     <ion-button shape="round" size="small" (click)="addPassenger()" class="ion-padding-horizontal">+</ion-button>
     <ion-button shape="round" size="small" (click)="subPassenger()" class="ion-padding-horizontal">-</ion-button>
   </ion-item>
+  <ion-item>
+      <label>Number of Childs:</label>
+      <label for="">{{numberChilds}}</label>
+      <ion-button shape="round" size="small" (click)="addChild()" class="ion-padding-horizontal">+</ion-button>
+      <ion-button shape="round" size="small" (click)="subChild()" class="ion-padding-horizontal">-</ion-button>
+    </ion-item>
   <ion-button class="ion-float-right" (click)="sendData()">Submit</ion-button>
 </ion-content>
