--- a/eurostart/src/app/lista-trenes/lista-trenes.page.html
+++ b/eurostart/src/app/lista-trenes/lista-trenes.page.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="hasLoaded">
   <ion-toolbar>
     <ion-title style="text-align: center">
-      {{data.train.origen}} - {{data.train.destino}}
+      {{data.from}} - {{data.to}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,12 +12,12 @@
       <ion-card-content>
         <ion-row>
           <ion-item>
-            <h1 style="text-align: center">{{data.train.origen}} - {{data.train.destino}}</h1>
+            <h1 style="text-align: center">{{data.from}} - {{data.to}}</h1>
           </ion-item>
         </ion-row>
         <ion-row>
           <ion-col><br>
-            <p style="text-align: center; font-size: 20px"> {{data.train.precio}}</p>
+            <p style="text-align: center; font-size: 20px"> {{data.price}}</p>
           </ion-col>
           <ion-col>
             <ion-button expand="block" size="large"> Reservar </ion-button>
