--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -13,7 +13,7 @@
         </ion-col>
         <ion-col>
           <ion-chip class="priceChip" color="secondary">
-            <ion-label color="dark">{{price}}/p</ion-label>
+            <ion-label color="dark">{{price}}€/p</ion-label>
           </ion-chip>
         </ion-col>
       </ion-row>
@@ -22,7 +22,7 @@
           <ion-input class="input">{{lastName}}</ion-input>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <ion-row *ngIf="isTrain">
         <ion-col>
           <ion-chip color="secondary">
             <ion-label color="dark">{{start}}</ion-label>
@@ -31,6 +31,13 @@
         <ion-col>
           <ion-icon name="arrow-round-forward" size="large" class="arrow"></ion-icon>
         </ion-col>
+        <ion-col>
+          <ion-chip color="secondary">
+            <ion-label color="dark">{{finish}}</ion-label>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col>
           <ion-chip color="secondary">
             <ion-label color="dark">{{finish}}</ion-label>
