--- a/eurostart/src/app/tickets/tickets.page.html
+++ b/eurostart/src/app/tickets/tickets.page.html
@@ -10,14 +10,26 @@
     <ion-item>
       <ion-icon *ngIf="item.isTrain" name="train" slot="start"></ion-icon>
       <ion-icon *ngIf="!item.isTrain" name="bed" slot="start"></ion-icon>
+      <ion-icon *ngIf="item.isTrain == null" name="train" slot="start"></ion-icon>
       <ion-label>{{ item.name }} {{ item.surname }}</ion-label>
       <ion-label slot="end">Precio: {{ item.price }} €</ion-label>
       <ion-button (click)="sendAllData(item)" fill="outline" slot="end">View</ion-button>
     </ion-item>
 
 
-    <ion-card-content>
-      DESTINO: {{ item.from }} <ion-icon size="small" name="arrow-round-forward"></ion-icon> {{ item.to }}
+    <ion-card-content *ngIf="!item.city && item.from">
+      Destino: <ion-chip> {{ item.from }} </ion-chip>
+      <ion-icon size="small" name="arrow-round-forward"></ion-icon>
+      <ion-chip> {{ item.to }} </ion-chip>
+    </ion-card-content>
+    <ion-card-content *ngIf="item.city && !item.from">
+      Ubicacion del Hotel: <ion-chip> {{ item.city }} </ion-chip>
+    </ion-card-content>
+    <ion-card-content *ngIf="item.city && item.from">
+      Ubicacion del Hotel: <ion-chip> {{ item.city }} </ion-chip> <br>
+      Destino: <ion-chip> {{ item.from }} </ion-chip>
+      <ion-icon size="small" name="arrow-round-forward"></ion-icon>
+      <ion-chip> {{ item.to }} </ion-chip>
     </ion-card-content>
   </ion-card>
 </ion-content>
