--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -37,13 +37,35 @@
           </ion-chip>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <ion-row *ngIf="!isTrain">
         <ion-col>
           <ion-chip color="secondary">
             <ion-label color="dark">{{finish}}</ion-label>
           </ion-chip>
         </ion-col>
       </ion-row>
+      <ion-row *ngIf="isTrain==null">
+          <ion-col>
+            <ion-chip color="secondary">
+              <ion-label color="dark">{{start}}</ion-label>
+            </ion-chip>
+          </ion-col>
+          <ion-col>
+            <ion-icon name="arrow-round-forward" size="large" class="arrow"></ion-icon>
+          </ion-col>
+          <ion-col>
+            <ion-chip color="secondary">
+              <ion-label color="dark">{{finish}}</ion-label>
+            </ion-chip>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="isTrain==null">
+          <ion-col>
+            <ion-chip color="secondary">
+              <ion-label color="dark">{{finish}}</ion-label>
+            </ion-chip>
+          </ion-col>
+        </ion-row>
       <ion-row>
         <ion-col>
           <ion-input class="input">Número de personas: {{people}}</ion-input>
