--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -22,7 +22,7 @@
           <ion-input class="input">{{lastName}}</ion-input>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="isTrain && !city">
+      <ion-row *ngIf="isTrain">
         <ion-col>
           <ion-chip color="secondary">
             <ion-label color="dark">{{start}}</ion-label>
@@ -37,14 +37,14 @@
           </ion-chip>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="!isTrain && city">
+      <ion-row *ngIf="!isTrain">
         <ion-col>
           <ion-chip color="secondary">
-            <ion-label color="dark">{{finish}}</ion-label>
+            <ion-label color="dark">{{city}}</ion-label>
           </ion-chip>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="isTrain==null">
+      <ion-row *ngIf="isTrain && city">
           <ion-col>
             <ion-chip color="secondary">
               <ion-label color="dark">{{start}}</ion-label>
@@ -59,7 +59,7 @@
             </ion-chip>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="isTrain==null">
+        <ion-row *ngIf="isTrain && city">
           <ion-col>
             <ion-chip color="secondary">
               <ion-label color="dark">{{finish}}</ion-label>
