--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -44,7 +44,7 @@
           </ion-chip>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="isTrain && city">
+      <ion-row *ngIf="isTrain==null && city">
           <ion-col>
             <ion-chip color="secondary">
               <ion-label color="dark">{{start}}</ion-label>
@@ -59,7 +59,7 @@
             </ion-chip>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="isTrain && city">
+        <ion-row *ngIf="isTrain==null && city">
           <ion-col>
             <ion-chip color="secondary">
               <ion-label color="dark">{{finish}}</ion-label>
