I fail too much x5

--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -47,7 +47,7 @@
       <ion-row *ngIf="isTrain==null && city">
           <ion-col>
             <ion-chip color="secondary">
-              <ion-label color="dark">{{start}}</ion-label>
+              <ion-label color="dark">{{name}}</ion-label>
             </ion-chip>
           </ion-col>
           <ion-col>
