--- a/eurostart/src/app/ticket-info/ticket-info.page.html
+++ b/eurostart/src/app/ticket-info/ticket-info.page.html
@@ -37,7 +37,7 @@
           </ion-chip>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="!isTrain">
+      <ion-row *ngIf="!isTrain && isTrain!=null">
         <ion-col>
           <ion-chip color="secondary">
             <ion-label color="dark">{{city}}</ion-label>
@@ -47,7 +47,7 @@
       <ion-row *ngIf="isTrain==null && city">
           <ion-col>
             <ion-chip color="secondary">
-              <ion-label color="dark">{{name}}</ion-label>
+              <ion-label color="dark">{{start}}</ion-label>
             </ion-chip>
           </ion-col>
           <ion-col>
@@ -62,7 +62,7 @@
         <ion-row *ngIf="isTrain==null && city">
           <ion-col>
             <ion-chip color="secondary">
-              <ion-label color="dark">{{finish}}</ion-label>
+              <ion-label color="dark">{{city}}</ion-label>
             </ion-chip>
           </ion-col>
         </ion-row>
