--- a/eurostart/src/app/homepage/homepage.page.html
+++ b/eurostart/src/app/homepage/homepage.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>homepage</ion-title>
+    <ion-title style="text-align: center">EuroStart</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
   <br>
   <ion-button shape="round" expand="full" href="/searchbar">Trenes</ion-button>
   <br>
-  <ion-button shape="round" expand="full" href="/contactanos">Hoteles</ion-button>
+  <ion-button shape="round" expand="full" href="/hotelsearch">Hoteles</ion-button>
   <br>
   <br>
   <ion-button shape="round" expand="full" color="tertiary" href="/contactanos">Contactanos</ion-button>
