--- a/eurostart/src/app/hotelsearch/hotelsearch.page.html
+++ b/eurostart/src/app/hotelsearch/hotelsearch.page.html
@@ -30,5 +30,5 @@
         <ion-button shape="round" size="small" (click)="addChild()" class="ion-padding-horizontal">+</ion-button>
         <ion-button shape="round" size="small" (click)="subChild()" class="ion-padding-horizontal">-</ion-button>
       </ion-item>
-    <ion-button class="ion-float-right" (click)="sendData()">Submit</ion-button>
+    <ion-button class="" (click)="sendData()">Submit</ion-button>
   </ion-content>
