--- a/eurostart/src/app/lista-trenes/lista-trenes.page.html
+++ b/eurostart/src/app/lista-trenes/lista-trenes.page.html
@@ -8,7 +8,7 @@
 
 <ion-content *ngIf="hasLoaded">
   <ion-grid>
-    <ion-card>
+    <ion-card *ngFor="let hora of horas;let precio = index">
       <ion-card-content>
         <ion-row>
           <ion-item>
@@ -17,7 +17,7 @@
         </ion-row>
         <ion-row>
           <ion-col><br>
-            <p style="text-align: center; font-size: 20px"> {{data.price}}</p>
+            <p style="text-align: center; font-size: 20px"> {{hora}} - {{precios[precio]}}$ </p>
           </ion-col>
           <ion-col>
             <ion-button expand="block" size="large"> Reservar </ion-button>
