--- a/eurostart/src/app/listahoteles/listahoteles.page.html
+++ b/eurostart/src/app/listahoteles/listahoteles.page.html
@@ -24,5 +24,6 @@
           </ion-card-content>
       </ion-card>
     </ion-grid>
+    <ion-button expand="full" (click)="goBack()"> Volver a home </ion-button>
 
 </ion-content>
