--- a/eurostart/src/app/listahoteles/listahoteles.page.html
+++ b/eurostart/src/app/listahoteles/listahoteles.page.html
@@ -18,7 +18,7 @@
               <p style="text-align: center; font-size: 20px">{{dinero[precio]}} €</p>
             </ion-col>
             <ion-col>
-              <ion-button expand="block" size="large"> Reservar </ion-button>
+              <ion-button expand="block" size="large" (click)="goTickets()"> Reservar </ion-button>
             </ion-col>
           </ion-row>
           </ion-card-content>
