--- a/eurostart/src/app/lista-trenes/lista-trenes.page.html
+++ b/eurostart/src/app/lista-trenes/lista-trenes.page.html
@@ -26,4 +26,5 @@
         </ion-card-content>
     </ion-card>
   </ion-grid>
+  <ion-button expand="full" (click)="goBack()"> Volver a home </ion-button>
 </ion-content>
