--- a/eurostart/src/app/lista-trenes/lista-trenes.page.html
+++ b/eurostart/src/app/lista-trenes/lista-trenes.page.html
@@ -20,7 +20,7 @@
             <p style="text-align: center; font-size: 20px"> {{data.price}}</p>
           </ion-col>
           <ion-col>
-            <ion-button expand="block" size="large"> Reservar </ion-button>
+            <ion-button expand="block" size="large" (click)="goTickects()"> Reservar </ion-button>
           </ion-col>
         </ion-row>
         </ion-card-content>
